docs/api/qiskit/0.27/qiskit.circuit.library.RXXGate.mdx
---
title: RXXGate
description: API reference for qiskit.circuit.library.RXXGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.RXXGate
---

# qiskit.circuit.library.RXXGate

<Class id="qiskit.circuit.library.RXXGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/circuit/library/standard_gates/rxx.py" signature="RXXGate(theta)" modifiers="class">
  A parametric 2-qubit $X \otimes X$ interaction (rotation about XX).

  This gate is symmetric, and is maximally entangling at $\theta = \pi/2$.

  **Circuit Symbol:**

  ```python
       ┌─────────┐
  q_0: ┤1        ├
       │  Rxx(ϴ) │
  q_1: ┤0        ├
       └─────────┘
  ```

  **Matrix Representation:**

$$
\begin{align}\begin{aligned}\newcommand{\th}{\frac{\theta}{2}}\\\begin{split}R_{XX}(\theta) = exp(-i \th X{\otimes}X) =
\begin{pmatrix}
\cos(\th)   & 0           & 0           & -i\sin(\th) \\
0           & \cos(\th)   & -i\sin(\th) & 0 \\
0           & -i\sin(\th) & \cos(\th)   & 0 \\
-i\sin(\th) & 0           & 0           & \cos(\th)
\end{pmatrix}\end{split}\end{aligned}\end{align} 
$$

  **Examples:**

  > $$
  > R_{XX}(\theta = 0) = I
  > $$
  >
  > $$
  > R_{XX}(\theta = \pi) = i X \otimes X
  > $$
  >
  > $$
  > \begin{split}R_{XX}(\theta = \frac{\pi}{2}) = \frac{1}{\sqrt{2}}
  >                         \begin{pmatrix}
  >                             1  & 0  & 0  & -i \\
  >                             0  & 1  & -i & 0 \\
  >                             0  & -i & 1  & 0 \\
  >                             -i & 0  & 0  & 1
  >                         \end{pmatrix}\end{split}
  > $$

  Create new RXX gate.

  ### \_\_init\_\_

  <Function id="qiskit.circuit.library.RXXGate.__init__" signature="__init__(theta)">
    Create new RXX gate.
  </Function>

  ## Methods

  |                                                                                                                                                 |                                                                          |
  | ----------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------ |
  | [`__init__`](#qiskit.circuit.library.RXXGate.__init__ "qiskit.circuit.library.RXXGate.__init__")(theta)                                         | Create new RXX gate.                                                     |
  | [`add_decomposition`](#qiskit.circuit.library.RXXGate.add_decomposition "qiskit.circuit.library.RXXGate.add_decomposition")(decomposition)      | Add a decomposition of the instruction to the SessionEquivalenceLibrary. |
  | [`assemble`](#qiskit.circuit.library.RXXGate.assemble "qiskit.circuit.library.RXXGate.assemble")()                                              | Assemble a QasmQobjInstruction                                           |
  | [`broadcast_arguments`](#qiskit.circuit.library.RXXGate.broadcast_arguments "qiskit.circuit.library.RXXGate.broadcast_arguments")(qargs, cargs) | Validation and handling of the arguments and its relationship.           |
  | [`c_if`](#qiskit.circuit.library.RXXGate.c_if "qiskit.circuit.library.RXXGate.c_if")(classical, val)                                            | Add classical condition on register classical and value val.             |
  | [`control`](#qiskit.circuit.library.RXXGate.control "qiskit.circuit.library.RXXGate.control")(\[num\_ctrl\_qubits, label, ctrl\_state])         | Return controlled version of gate.                                       |
  | [`copy`](#qiskit.circuit.library.RXXGate.copy "qiskit.circuit.library.RXXGate.copy")(\[name])                                                   | Copy of the instruction.                                                 |
  | [`inverse`](#qiskit.circuit.library.RXXGate.inverse "qiskit.circuit.library.RXXGate.inverse")()                                                 | Return inverse RXX gate (i.e.                                            |
  | [`is_parameterized`](#qiskit.circuit.library.RXXGate.is_parameterized "qiskit.circuit.library.RXXGate.is_parameterized")()                      | Return True .IFF.                                                        |
  | [`mirror`](#qiskit.circuit.library.RXXGate.mirror "qiskit.circuit.library.RXXGate.mirror")()                                                    | DEPRECATED: use instruction.reverse\_ops().                              |
  | [`power`](#qiskit.circuit.library.RXXGate.power "qiskit.circuit.library.RXXGate.power")(exponent)                                               | Creates a unitary gate as gate^exponent.                                 |
  | [`qasm`](#qiskit.circuit.library.RXXGate.qasm "qiskit.circuit.library.RXXGate.qasm")()                                                          | Return a default OpenQASM string for the instruction.                    |
  | [`repeat`](#qiskit.circuit.library.RXXGate.repeat "qiskit.circuit.library.RXXGate.repeat")(n)                                                   | Creates an instruction with gate repeated n amount of times.             |
  | [`reverse_ops`](#qiskit.circuit.library.RXXGate.reverse_ops "qiskit.circuit.library.RXXGate.reverse_ops")()                                     | For a composite instruction, reverse the order of sub-instructions.      |
  | [`soft_compare`](#qiskit.circuit.library.RXXGate.soft_compare "qiskit.circuit.library.RXXGate.soft_compare")(other)                             | Soft comparison between gates.                                           |
  | [`to_matrix`](#qiskit.circuit.library.RXXGate.to_matrix "qiskit.circuit.library.RXXGate.to_matrix")()                                           | Return a Numpy.array for the gate unitary matrix.                        |
  | [`validate_parameter`](#qiskit.circuit.library.RXXGate.validate_parameter "qiskit.circuit.library.RXXGate.validate_parameter")(parameter)       | Gate parameters should be int, float, or ParameterExpression             |

  ## Attributes

  |                                                                                                                    |                                                                               |
  | ------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------- |
  | [`decompositions`](#qiskit.circuit.library.RXXGate.decompositions "qiskit.circuit.library.RXXGate.decompositions") | Get the decompositions of the instruction from the SessionEquivalenceLibrary. |
  | [`definition`](#qiskit.circuit.library.RXXGate.definition "qiskit.circuit.library.RXXGate.definition")             | Return definition in terms of other basic gates.                              |
  | [`duration`](#qiskit.circuit.library.RXXGate.duration "qiskit.circuit.library.RXXGate.duration")                   | Get the duration.                                                             |
  | [`label`](#qiskit.circuit.library.RXXGate.label "qiskit.circuit.library.RXXGate.label")                            | Return gate label                                                             |
  | [`params`](#qiskit.circuit.library.RXXGate.params "qiskit.circuit.library.RXXGate.params")                         | return instruction params.                                                    |
  | [`unit`](#qiskit.circuit.library.RXXGate.unit "qiskit.circuit.library.RXXGate.unit")                               | Get the time unit of duration.                                                |

  ## Members list

  ### add\_decomposition

  <Function id="qiskit.circuit.library.RXXGate.add_decomposition" signature="add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  ### assemble

  <Function id="qiskit.circuit.library.RXXGate.assemble" signature="assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    `Instruction`
  </Function>

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.RXXGate.broadcast_arguments" signature="broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  ### c\_if

  <Function id="qiskit.circuit.library.RXXGate.c_if" signature="c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  ### control

  <Function id="qiskit.circuit.library.RXXGate.control" signature="control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return controlled version of gate. See [`ControlledGate`](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate") for usage.

    **Parameters**

    *   **num\_ctrl\_qubits** (`Optional`\[`int`]) – number of controls to add to gate (default=1)
    *   **label** (`Optional`\[`str`]) – optional gate label
    *   **ctrl\_state** (`Union`\[`int`, `str`, `None`]) – The control state in decimal or as a bitstring (e.g. ‘111’). If None, use 2\*\*num\_ctrl\_qubits-1.

    **Returns**

    Controlled version of gate. This default algorithm uses num\_ctrl\_qubits-1 ancillae qubits so returns a gate of size num\_qubits + 2\*num\_ctrl\_qubits - 1.

    **Return type**

    [qiskit.circuit.ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")

    **Raises**

    **QiskitError** – unrecognized mode or invalid ctrl\_state
  </Function>

  ### copy

  <Function id="qiskit.circuit.library.RXXGate.copy" signature="copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### decompositions

  <Attribute id="qiskit.circuit.library.RXXGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.RXXGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.RXXGate.duration">
    Get the duration.
  </Attribute>

  ### inverse

  <Function id="qiskit.circuit.library.RXXGate.inverse" signature="inverse()">
    Return inverse RXX gate (i.e. with the negative rotation angle).
  </Function>

  ### is\_parameterized

  <Function id="qiskit.circuit.library.RXXGate.is_parameterized" signature="is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  ### label

  <Attribute id="qiskit.circuit.library.RXXGate.label">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  ### mirror

  <Function id="qiskit.circuit.library.RXXGate.mirror" signature="mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### params

  <Attribute id="qiskit.circuit.library.RXXGate.params">
    return instruction params.
  </Attribute>

  ### power

  <Function id="qiskit.circuit.library.RXXGate.power" signature="power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  ### qasm

  <Function id="qiskit.circuit.library.RXXGate.qasm" signature="qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  ### repeat

  <Function id="qiskit.circuit.library.RXXGate.repeat" signature="repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  ### reverse\_ops

  <Function id="qiskit.circuit.library.RXXGate.reverse_ops" signature="reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### soft\_compare

  <Function id="qiskit.circuit.library.RXXGate.soft_compare" signature="soft_compare(other)">
    Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.

    **Parameters**

    **other** (*instruction*) – other instruction.

    **Returns**

    are self and other equal up to parameter expressions.

    **Return type**

    bool
  </Function>

  ### to\_matrix

  <Function id="qiskit.circuit.library.RXXGate.to_matrix" signature="to_matrix()">
    Return a Numpy.array for the gate unitary matrix.

    **Returns**

    if the Gate subclass has a matrix definition.

    **Return type**

    np.ndarray

    **Raises**

    **CircuitError** – If a Gate subclass does not implement this method an exception will be raised when this base class method is called.
  </Function>

  ### unit

  <Attribute id="qiskit.circuit.library.RXXGate.unit">
    Get the time unit of duration.
  </Attribute>

  ### validate\_parameter

  <Function id="qiskit.circuit.library.RXXGate.validate_parameter" signature="validate_parameter(parameter)">
    Gate parameters should be int, float, or ParameterExpression
  </Function>
</Class>

